tests/invalid/foreign_include_file_missing.err_exp3
Error: can't open `./missing_file' for input: Could not find file 'missing_file'.
